[project]
name = "fast-pmtiles"
version = "0.1.0"
description = "OGC Tiles API from PMTiles Sources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "async-pmtiles>=0.1.0",
    "cachetools>=7.0.1",
    "fastapi[standard]>=0.128.8",
    "jinja2>=3.1.6",
    "obstore>=0.8.2",
]


[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=9.0.2", "ruff>=0.15.0", "ty>=0.0.16"]

[tool.ruff]
extend-select = ["UP"]
target-version = "py313"
